Se agrega el autoload al json, se configura el git ignore y se configura phpunit

--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,10 @@
             "email": "vallecesco@gmail.com"
         }
     ],
-    "require": {}
+    "require": {},
+    "autoload": {
+        "psr-4": {
+            "App\\":"src/"
+        }
+    }
 }
